Correct issue with logo bar spacing

--- a/wp-content/themes/twentysixteen-child/style.css
+++ b/wp-content/themes/twentysixteen-child/style.css
@@ -256,7 +256,7 @@ p {
     background: #f7f7f7;
     padding: 0;
 }
-#logos-container .col-lg-3 {
+#logos-container .col-xs-3 {
     padding: 1.5em 3em 1em;
 }
 .logo-img {
